# ic-client-one-wrap

./: .cproject  .gcc-flags.json  .gitignore  .jsbeautifyrc  .project  .uncrustify.cfg  cgo.cc  cgo.h  composed_pc_factory.cc  composed_pc_factory.h  composed_peer_connection_factory.cc  composed_peer_connection_factory.h  defaults.cc  fake_test.cc  fake_test.h  gangvideocapturer.cc  gangvideocapturer.hh  gangvideocapturerfactory.cc  gangvideocapturerfactory.h  ice_servers.cc  ice_servers.go  ice_servers.h  ice_servers.hh  ipcam_info.h  meson.build  message.cc  message.go  message.h  offer.txt  one_spdlog_console.cc  one_spdlog_console.h  owner_ref_proxy.h  param_types.h  peer.cc  peer.h  peer_wrap.cc  peer_wrap.h  peerconn.cc  peerconn.go  peerconn.h  (+7 more)
gang/: README.md  ffmpeg_format.c  ffmpeg_format.h  ffmpeg_log.c  ffmpeg_log.h  ffmpeg_transcoding.c  ffmpeg_transcoding.h  gang.cc  gang.h  gang_audio_device.cc  gang_audio_device.h  gang_dec.h  gang_decoder.cc  gang_decoder.h  gang_decoder_impl.c  gang_decoder_impl.h  gang_decoder_interface.h  gang_init_deps.cc  gang_init_deps.h  gang_spdlog_console.cc  gang_spdlog_console.h  gangvideocapturer.cc  gangvideocapturer.h  meson.build
gang/test/: .uncrustify.cfg  README.md  common.h  fake_gang_decoder.h  gang_decoder_impl_av_info.cc  main.cc  meson.build
peer/: cgo.h  composed_pc_factory.cc  composed_pc_factory.h  ipcam_info.h  meson.build  one_spdlog_console.cc  one_spdlog_console.h  peer.cc  peer.h  rtc_wrap.cc  shared.cc  shared.h
